styles.css
html {
	margin:0;
}

/*Need to fix buttons at top so they go to column
under a certain width- also the bottom three have
trouble because they move outside their panel
when it collapses to next row- also need a min height so 
the middle column doesn't dissappear- maybe the
footer could dissappear?
On small screen the fixed bar would have to 
dissappear*/

body {
	width: 100%;
	height: 100%;
	background-color: rgba(8, 11, 39, 1);
	margin: 0;
	font-size: 16px;
	font-family: 'Lato',serif, sans-serif;
}

p {

}
a:link {
	text-decoration: none;
}

a:hover {
	color: blue;
}
a:visited {
	color: white;
}

i {
	transition: hover .2s ease,
				cursor 0s linear;
}

i:hover {
	color:rgba(0, 200, 255, 1);
	cursor: pointer;
}

/*Title Bar*/
.fixed-title {
	background-color: rgba(255, 255, 255, .95);
	position: fixed;
	width:100%;
	display: inline-flex;
	flex-direction: row;
	justify-content: space-between;
}

.titles {	
	color: rgba(90,90,90,1);
	margin: 1rem 1rem
}


.titles:first-child {
	font-size: 2rem;
	font-style: italic;
}

.subtitle {
	font-style: normal;

}

/*Link Buttons*/
.link {
	display:inline-flex;
    justify-content:space-around;
    flex-direction:row;
    flex-shrink: 1;
    margin-bottom: 10px;
    margin-top: 1rem;
    
}
button {
	width: 35px;
	height: 35px;
	text-align: center;
	border-radius: 6px;
	background-color: rgba(69, 69, 69, 1);
	color:#fff;
	margin-right: 10px;
	box-shadow: 0px 2px 8px 2px #444;
}



.clearfix {
	display:inline-flex;
	padding-top: 5rem;
}




/*Main Body Panels*/
main {
	display: flex;
	flex-direction: column;	
}

.panel {
	width: auto;
	height: 559px;
	border-radius:5px;
	/*margin: 10px 0;*/
	color:  #fff;	
}




/*About Me Panel*/
.about {	
	height: 35rem;
	margin: 0 10px;
	font-size: 1.2rem;
	overflow: scroll;
}
.about-title {
	margin-bottom: 2rem;
}

.me {
	float:left;
	margin-left: 50px;
	height:400px;
	width:400px;
	font-size: 4em;
}
.about-text-box {
	padding: 0 20px;
	float:right;
	margin-right: 50px;
	width: 30%;
	height: 400px;
	background: rgba(255,255,255,.5);
	overflow: scroll;
}



.clearfloat {
	clear:both;
	width:100%;
	
}


/*Experience Panel*/
.exp {
	/*background-image: url(mountain.jpg);*/
/*	background-size: cover;
    background-repeat:no-repeat;*/
    background-color:white;
    justify-content: space-between;
    height: 22rem;

    
}
.panel-title {
	font-size: 3rem;
	align-self: flex-start;
	margin-left: 10px;
}

.exp-title-margin {
	margin-top: 3rem;
}

.exp-list {
	margin-left: 10rem;
}

.font-black {
	color: black;
}
.exp ul {
	font-size: 2rem;  
	color: #fff;
	color: black;
	/*align-self: flex-end;*/
	margin-bottom: 215px;
}
/*******************Blog Panel*************************************/
.blog-panel {
	height: 50rem;
}

.blog {
	color: white;
	height: 550px;
	width: 50%;
	overflow: scroll;
	margin-right:auto;
	margin-left:auto;
}
.each-blog {

	width: 100%;
	border-bottom: 2px solid white;
	
}

/*Portfolio Panel*/
.portfolio {
	/*background-image: url(expmountain.jpg);*/
	background-image: url(mountain.jpg);
	background-size: cover;
	background-repeat:no-repeat;
	/*color:rgba(8, 11, 39, 1);*/
	color:white;
	margin-bottom: 6rem;
	overflow: scroll;
}


.box {
	display: inline-flex;
	flex-direction: column;
	/*justify-content: space-between; alters the text*/
	flex-shrink: 1;
	margin: -3rem 0rem 1rem 3rem;
	width: 25%;
	min-height:350px;
	font-style: italic;
	font-size: 2rem;
	padding-left: 2rem;
	padding-right: 1rem;
	background: rgba(255,255,255,.5);
}

.box p {
	margin: 0;
}

.box-title {
	margin-top: 1rem;
	margin-bottom: 1rem;
	color: black;
}
.box a {
	color: rgba(0, 18, 190, 1);
	text-decoration: underline;
}

.box a:hover {
	color: black;
}
.box ul {
	padding: 0;
	margin: 0;
	font-size: 1.1rem;
}

.box li {

	color: black;
	font-style: italic;
	font-size: 1rem;
	margin-bottom: .1rem;
}

.box blockquote {
	color: black;
	font-size: 1rem;
}


/*///////////////////////////////////////////////*/



.footer {
	position: fixed;
	width:100%;
	height: 5rem;
	background: #fff;
	bottom:0;
	font-style: italic;
	font-size: .7rem;
	transition: background-color 1.5s ease,
				color 1.5s ease-in-out;
}
.footer a {
	color: rgba(8, 11, 39, 1);
	text-decoration: underline;
	transition: color 1.5s ease-in-out;
}

.footer:hover {
	background:black;
	color:white;
}
.footer:hover a {
	color:white;
}	

